Update agenda & speakers

--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -62,6 +62,7 @@
                         <option value='eurecat'>Eurecat</option>
                         <option value='ficodes'>Ficodes</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
+                        <option value='fiware-tsc'>FIWARE TSC</option>
                         <option value='futurecraft-foundation'>FutureCraft Foundation</option>
                         <option value='government-of-morocco'>Government of Morocco</option>
                         <option value='grupotx'>GrupoTX</option>
@@ -98,7 +99,6 @@
                         <option value='cbo'>CBO</option>
                         <option value='ceo'>CEO</option>
                         <option value='chairman'>Chairman</option>
-                        <option value='chairman-fiware-tsc'>Chairman FIWARE TSC</option>
                         <option value='coo'>COO</option>
                         <option value='coordinator'>Coordinator</option>
                         <option value='cso'>CSO</option>
