--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -646,7 +646,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-26" class="grid-item    chairman-fiware-tsc ">
+        <div id="item-26" class="grid-item fiware-tsc   chairman ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='26'>
                 <div class='city-photo-container'>
@@ -658,8 +658,8 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='26'>Juanjo Hierro</h6>
-                    <h4 class='position cat-bio' data-modal='26'>Chairman FIWARE TSC</h4>
-                    <h5 class='company-link'><a target='_blank' href='' rel='noopener'></a></h5>
+                    <h4 class='position cat-bio' data-modal='26'>Chairman</h4>
+                    <h5 class='company-link'><a target='_blank' href='' rel='noopener'>FIWARE TSC</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/jhierro/' rel='noopener'><span
