--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -1543,12 +1543,12 @@
 
 <div class='grid-item circular-economy---urban-development digital-product-passports---data-sovereignty-in-climate-resilient-cities vinith-bhandari 22-may'>
     <div class="gridElementTextContainer">
-      <a href="./program-details-summary?id=orchestrating-data-sovereignty-for-circular-and-climate-resilient-cities">
+      <a href="./program-details-summary?id=trusted-data-for-circular-futures--digital-product-passports---data-sovereignty-in-climate-resilient-cities">
         <div class="chip-track">
           <div class="track light-purple">Circular Economy &amp; Urban Development</div>
           
         </div>
-        <p class="panel-title light-purple ">Orchestrating Data Sovereignty for Circular and Climate-Resilient Cities</p> 
+        <p class="panel-title light-purple ">Trusted Data for Circular Futures: Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</p> 
         <span class="excerpt">Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</span>
         <div class="panel-info">
           <div class="date-time">
