fgs25 sponsors updates

--- a/directories/fiware-summit/sponsors/filters.html
+++ b/directories/fiware-summit/sponsors/filters.html
@@ -25,6 +25,7 @@
             <select name='filterCompany' id='filterCompany'>
                 <option value='*'>All Sponsors</option>
                         <option value='bable'>Bable</option>
+                        <option value='bizztech'>BizzTech</option>
                         <option value='club-globals'>Club Globals</option>
                         <option value='iot-global-network'>Iot Global Network</option>
                         <option value='iot-now'>Iot Now</option>
