--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -107,6 +107,7 @@
           <option value='andrea-cruciani'>Andrea Cruciani</option>
           <option value='mohamed-dafir'>Mohamed Dafir</option>
           <option value='gert-de-tant'>Gert De Tant</option>
+          <option value='matthias-de-bièvre'>Matthias de Bièvre</option>
           <option value='hicham-el-habti'>Hicham El Habti</option>
           <option value='amal-el-fellah-seghrouchni'>Amal El Fellah Seghrouchni</option>
           <option value='mohamed-essaidi'>Mohamed Essaidi</option>
@@ -115,6 +116,7 @@
           <option value='gerardo-guarino-f-'>Gerardo Guarino F.</option>
           <option value='aawatif-hayar'>Aawatif Hayar</option>
           <option value='eloy-hernandez'>Eloy Hernandez</option>
+          <option value='juanjo-hierro'>Juanjo Hierro</option>
           <option value='sveva-ianese'>Sveva Ianese</option>
           <option value='antonio-jara'>Antonio Jara</option>
           <option value='jure-lampe'>Jure Lampe</option>
