--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -938,7 +938,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Thimo Thoeye</div>
-            <div class="speaker-job-title">Manager</div>
+            <div class="speaker-job-title">Lead</div>
             <div class="speaker-company">OASC</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -1091,7 +1091,7 @@
           <div class="speaker-info">
             <div class="speaker-name">Juanjo Hierro</div>
             <div class="speaker-job-title">Chairman</div>
-            <div class="speaker-company">FIWARE TSC</div>
+            <div class="speaker-company">FIWARE Technical<br/> Steering Committee</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
@@ -1703,7 +1703,7 @@
           <div class="speaker-info">
             <div class="speaker-name">Suna Akbayir</div>
             <div class="speaker-job-title">CEO</div>
-            <div class="speaker-company">Artech International BVBA</div>
+            <div class="speaker-company">Artech International Bv</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
@@ -2148,7 +2148,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Björn Schwarze</div>
-            <div class="speaker-job-title">CEO</div>
+            <div class="speaker-job-title">Director</div>
             <div class="speaker-company">ADDIX</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -2318,7 +2318,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Massimo Bertoncini</div>
-            <div class="speaker-job-title">Director</div>
+            <div class="speaker-job-title">Manager</div>
             <div class="speaker-company">Engineering</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -2537,8 +2537,8 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Stefan Wiedemann</div>
-            <div class="speaker-job-title">Lead</div>
-            <div class="speaker-company">Ficodes</div>
+            <div class="speaker-job-title">Software Engineer</div>
+            <div class="speaker-company">FICODES</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
@@ -2626,7 +2626,7 @@
           <div class="speaker-info">
             <div class="speaker-name">Matteo Repetto</div>
             <div class="speaker-job-title">Researcher</div>
-            <div class="speaker-company">CNR / IMATI</div>
+            <div class="speaker-company">CNR-IMATI</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
@@ -2666,8 +2666,8 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Stefan Wiedemann</div>
-            <div class="speaker-job-title">Lead</div>
-            <div class="speaker-company">Ficodes</div>
+            <div class="speaker-job-title">Software Engineer</div>
+            <div class="speaker-company">FICODES</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
@@ -2774,7 +2774,7 @@
           <div class="speaker-info">
             <div class="speaker-name">Sveva Ianese</div>
             <div class="speaker-job-title">Researcher</div>
-            <div class="speaker-company">Data Valley Consulting,<br/> University of Padova (Italy)</div>
+            <div class="speaker-company">University of Padova<br/> (Italy)</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
@@ -2856,7 +2856,7 @@
           <div class="speaker-info">
             <div class="speaker-name">Luigi Coppolino</div>
             <div class="speaker-job-title">Professor</div>
-            <div class="speaker-company">Parthenope University</div>
+            <div class="speaker-company">University of Naples<br/> Parthenope</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
@@ -2896,7 +2896,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Mohamed Dafir</div>
-            <div class="speaker-job-title">Managing Partner</div>
+            <div class="speaker-job-title">Vice-President</div>
             <div class="speaker-company">Mohammed V University<br/> Rabat</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -3033,7 +3033,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Manfredi Pistone</div>
-            <div class="speaker-job-title">Researcher</div>
+            <div class="speaker-job-title">Technical Manager</div>
             <div class="speaker-company">Engineering</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -3136,7 +3136,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Mohamed Dafir</div>
-            <div class="speaker-job-title">Managing Partner</div>
+            <div class="speaker-job-title">Vice-President</div>
             <div class="speaker-company">Mohammed V University<br/> Rabat</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
@@ -3244,7 +3244,7 @@
           </div>
           <div class="speaker-info">
             <div class="speaker-name">Mohamed Dafir</div>
-            <div class="speaker-job-title">Managing Partner</div>
+            <div class="speaker-job-title">Vice-President</div>
             <div class="speaker-company">Mohammed V University<br/> Rabat</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
