--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -59,7 +59,7 @@
                         <option value='dksr---data-competence-center-for-cities-and-regions'>DKSR - Data Competence Center for Cities and Regions</option>
                         <option value='engineering'>Engineering</option>
                         <option value='eurecat'>Eurecat</option>
-                        <option value='ficodes'>Ficodes</option>
+                        <option value='ficodes'>FICODES</option>
                         <option value='fiware-foundation'>FIWARE Foundation</option>
                         <option value='fiware-technical-steering-committee'>FIWARE Technical Steering Committee</option>
                         <option value='futurecraft-foundation'>FutureCraft Foundation</option>
@@ -120,6 +120,7 @@
                         <option value='professor'>Professor</option>
                         <option value='program-manager'>Program Manager</option>
                         <option value='researcher'>Researcher</option>
+                        <option value='software-engineer'>Software Engineer</option>
                         <option value='technical-expert'>Technical Expert</option>
                         <option value='technical-manager'>Technical Manager</option>
                         <option value='vice-president'>Vice-President</option>
