--- a/directories/fiware-summit/speakers/people.html
+++ b/directories/fiware-summit/speakers/people.html
@@ -1105,7 +1105,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-44" class="grid-item addix   ceo ">
+        <div id="item-44" class="grid-item addix   director ">
             <div class='f-cat active'>
                 <div class='cat-bio' data-modal='44'>
                 <div class='city-photo-container'>
@@ -1117,7 +1117,7 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name cat-bio' data-modal='44'>Björn Schwarze</h6>
-                    <h4 class='position cat-bio' data-modal='44'>Chief Executive Officer</h4>
+                    <h4 class='position cat-bio' data-modal='44'>Managing Director</h4>
                     <h5 class='company-link'><a target='_blank' href='https://www.addix.net/' rel='noopener'>ADDIX</a></h5>
                 </div>
                 <div class='icons'>
@@ -1256,7 +1256,7 @@
                 </div>
             </div>
         </div>
-        <div id="item-50" class="grid-item ficodes   lead architect ">
+        <div id="item-50" class="grid-item ficodes   software-engineer ">
             <div class='f-cat active'>
                 <div class='city-photo-container'>
                     <picture>
@@ -1266,8 +1266,8 @@
                 </div>
                 <div class='profile-details'>
                     <h6 class='name' data-modal='50'>Stefan Wiedemann</h6>
-                    <h4 class='position' data-modal='50'>Technical Lead &amp; Architect</h4>
-                    <h5 class='company-link'><a target='_blank' href='https://www.ficodes.com/en/' rel='noopener'>Ficodes</a></h5>
+                    <h4 class='position' data-modal='50'>Senior Software Engineer</h4>
+                    <h5 class='company-link'><a target='_blank' href='https://www.ficodes.com/en/' rel='noopener'>FICODES</a></h5>
                 </div>
                 <div class='icons'>
                         <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/stefan-wiedemann-37a0ba13a/' rel='noopener'><span
