--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -2162,7 +2162,7 @@
           <div class="speaker-info">
             <div class="speaker-name">Tim Cleffmann</div>
             <div class="speaker-job-title">CBO</div>
-            <div class="speaker-company">DKSR - Data Competence<br/> Center for Cities and Regions</div>
+            <div class="speaker-company">DKSR</div>
             <div class="btn-icon">
       				<span class="material-symbols-outlined icon cta small">trending_flat</span>
     				</div>
