--- a/directories/fiware-summit/agenda/agenda.html
+++ b/directories/fiware-summit/agenda/agenda.html
@@ -1026,7 +1026,7 @@
   </div>
 
 
-<div class='grid-item data-spaces---interoperability smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust juanjo-hierro matthias-de-bièvre brecht-van-de-vyvere joaquín-salvachúa 22-may'>
+<div class='grid-item data-spaces---interoperability smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust matthias-de-bièvre juanjo-hierro brecht-van-de-vyvere joaquín-salvachúa 22-may'>
     <div class="gridElementTextContainer">
       <a href="./program?id=smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust">
         <div class="chip-track">
@@ -1817,7 +1817,7 @@
   </div>
 
 
-<div class='grid-item data-spaces---interoperability from-silos-to-synergy--building-smart-governance-with-interoperability megumi-suzuki jin-kawasaki tim-cleffmann gerardo-guarino-f- 22-may'>
+<div class='grid-item data-spaces---interoperability from-silos-to-synergy--building-smart-governance-with-interoperability megumi-suzuki tim-cleffmann jin-kawasaki gerardo-guarino-f- 22-may'>
     <div class="gridElementTextContainer">
       <a href="./program?id=from-silos-to-synergy--building-smart-governance-with-interoperability">
         <div class="chip-track">
