--- a/directories/fiware-summit/agenda/calendar.html
+++ b/directories/fiware-summit/agenda/calendar.html
@@ -372,7 +372,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust&details=Data Spaces &amp; InteroperabilityIn a world increasingly reliant on data-driven decision-making, the ability to seamlessly exchange, harmonize, and act on data across systems and stakeholders is critical — especially in high-profile, time-sensitive environments such as international summits, large-scale public events, and emergency scenarios.++Speakers:+Juanjo Hierro,Matthias de Bièvre,Brecht van de Vyvere,Joaquín Salvachúa,,&ctz=Africa/Casablanca&location=Room M&#x27;Goun&dates=20250522T143000/20250522T153000">Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust&details=Data Spaces &amp; InteroperabilityIn a world increasingly reliant on data-driven decision-making, the ability to seamlessly exchange, harmonize, and act on data across systems and stakeholders is critical — especially in high-profile, time-sensitive environments such as international summits, large-scale public events, and emergency scenarios.++Speakers:+Matthias de Bièvre,Juanjo Hierro,Brecht van de Vyvere,Joaquín Salvachúa,,&ctz=Africa/Casablanca&location=Room M&#x27;Goun&dates=20250522T143000/20250522T153000">Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</a>
              - Data Spaces &amp; Interoperability
 			<div class="date-time">
 	            <span class="separator-dot"></span>
@@ -592,7 +592,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=From Silos to Synergy: Building Smart Governance with Interoperability&details=Data Spaces &amp; InteroperabilityThis session explores how interoperability, open standards, and data governance are transforming smart governance from fragmented initiatives into cohesive, future-ready strategies.++Speakers:+Megumi Suzuki,Jin Kawasaki,Tim Cleffmann,Gerardo Guarino F.,,&ctz=Africa/Casablanca&location=Room M&#x27;Goun&dates=20250522T160000/20250522T050000">From Silos to Synergy: Building Smart Governance with Interoperability</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=From Silos to Synergy: Building Smart Governance with Interoperability&details=Data Spaces &amp; InteroperabilityThis session explores how interoperability, open standards, and data governance are transforming smart governance from fragmented initiatives into cohesive, future-ready strategies.++Speakers:+Megumi Suzuki,Tim Cleffmann,Jin Kawasaki,Gerardo Guarino F.,,&ctz=Africa/Casablanca&location=Room M&#x27;Goun&dates=20250522T160000/20250522T050000">From Silos to Synergy: Building Smart Governance with Interoperability</a>
              - Data Spaces &amp; Interoperability
 			<div class="date-time">
 	            <span class="separator-dot"></span>
