fgs25 agenda content updates

--- a/directories/fiware-summit/agenda/filters.html
+++ b/directories/fiware-summit/agenda/filters.html
@@ -63,21 +63,21 @@
           <option value='ai---machine-learning'>AI &amp; Machine Learning</option>
           <option value='ai-and-natural-language-for-smart-cities--turning-data-into-action'>AI and Natural Language for Smart Cities: Turning Data into Action</option>
           <option value='blue-cities-of-tomorrow--ai---iot-for-smart-water-and-resilient-cities'>Blue Cities of Tomorrow: AI &amp; IoT for Smart Water and Resilient Cities</option>
-          <option value='building-bridges-through-science--international-academic-cooperation-for-digital-transformation'>Building Bridges Through Science: International Academic Cooperation for Digital Transformation</option>
           <option value='data-spaces---security'>Data Spaces &amp; Security</option>
           <option value='digital-twins-for-real-time-optimization-of-sporting-mega-events'>Digital Twins for Real-Time Optimization of Sporting Mega-Events</option>
           <option value='fiware-catalog'>FIWARE Catalog</option>
           <option value='fiware-core-concepts'>FIWARE Core Concepts</option>
           <option value='from-silos-to-synergy--building-smart-governance-with-interoperability'>From Silos to Synergy: Building Smart Governance with Interoperability</option>
           <option value='global-fiware-use-cases-shaping-smart-cities-for-2030'>Global FIWARE Use Cases Shaping Smart Cities for 2030</option>
-          <option value='governing-trust--legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management'>Governing Trust: Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</option>
+          <option value='governing-trust--legal-and-data-space-frameworks-for-secure-cities'>Governing Trust: Legal and Data Space Frameworks for Secure Cities</option>
+          <option value='international-academic-cooperation-for-digital-transformation'>International Academic Cooperation for Digital Transformation</option>
           <option value='next-generation-governance--where-smart-meets-digital'>Next-Generation Governance: Where Smart Meets Digital</option>
           <option value='official-speeches'>Official Speeches</option>
           <option value='robotics---iot-agents'>Robotics &amp; IoT Agents</option>
           <option value='sdg-driven-solutions-for-a-sustainable-world-cup-legacy'>SDG-Driven Solutions for a Sustainable World Cup Legacy</option>
           <option value='secure-smart-city'>Secure Smart City</option>
           <option value='smart-data-spaces-for-high-profile-events--enabling-interoperability-and-trust'>Smart Data Spaces for High Profile Events: Enabling Interoperability and Trust</option>
-          <option value='trusted-data-for-circular-futures--digital-product-passports---data-sovereignty-in-climate-resilient-cities'>Trusted Data for Circular Futures: Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</option>
+          <option value='trusted-data-for-circular-futures'>Trusted Data for Circular Futures</option>
     </select>
   </div>
   <!-- <div class="filter-element">
