--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -102,7 +102,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/enabling-interoperable-data-exchange-between-systems.html">Enabling Interoperable Data Exchange Between Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agents.html">Introduction to IoT Agents</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ideation.html">IDEATION</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/trusted-data-for-circular-futures--digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Trusted Data for Circular Futures: Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports---data-sovereignty-in-climate-resilient-cities.html">Digital Product Passports &amp; Data Sovereignty in Climate-Resilient Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/interoperability-unleashed-for-data-spaces-specification-languages-and-scoring-for-big-data-and-ai-integration.html">Interoperability Unleashed for Data Spaces Specification Languages and Scoring for Big data and AI integration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-as-a-strategic-asset--lessons-from-porto-s-urban-platform-and-the-beopen-project.html">Data as a Strategic Asset: Lessons from Porto’s Urban Platform and the BeOpen Project</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
@@ -135,7 +135,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/cyber-security-digital-twins-for-securing-smart-cities.html">Cyber-security Digital Twins for Securing Smart Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/deploying-a-data-space-connector.html">Deploying a Data Space Connector</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/governing-trust--legal-and-data-space-frameworks-for-secure-cities-and-resilient-event-management.html">Governing Trust: Legal and Data Space Frameworks for Secure Cities and Resilient Event Management</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/governing-trust--legal-and-data-space-frameworks-for-secure-cities.html">Governing Trust: Legal and Data Space Frameworks for Secure Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/navigating-legal-challenges-in-data-spaces--lessons-from-the-eu-experience-.html">Navigating Legal Challenges in Data Spaces: Lessons From the EU experience.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/talking-with-your-smart-solution.html">Talking With Your Smart Solution</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/exploiting-fiware-potential-for-ehds-regulation-compliance.html">Exploiting FIWARE Potential for EHDS Regulation Compliance</a></li>
@@ -144,7 +144,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-turtle-sim-using-a-ros2-iot-agent.html">FIWARE Turtle SIM Using a ROS2 IoT Agent</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ddos-with-orion-ld.html">DDOS With Orion-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/building-bridges-through-science--international-academic-cooperation-for-digital-transformation.html">Building Bridges Through Science: International Academic Cooperation for Digital Transformation</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/international-academic-cooperation-for-digital-transformation.html">International Academic Cooperation for Digital Transformation</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opportunities-from-each-panelists.html">Opportunities From Each Panelists</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/options-for-data-persistence.html">Options for Data Persistence</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/panel-open-discussion.html">Panel Open Discussion</a></li>
