--- a/directories/fiware-summit/agenda/program/sitemap.html
+++ b/directories/fiware-summit/agenda/program/sitemap.html
@@ -73,7 +73,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/coffee-break.html">Coffee Break</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/global-fiware-use-cases-shaping-smart-cities-for-2030.html">Global FIWARE Use Cases Shaping Smart Cities for 2030</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/first-operational-smart-territory-in-morocco---berkane-experience.html">First Operational Smart Territory in Morocco - Berkane Experience</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/fiware-training--day-one.html">FIWARE Training: Day One</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-json-ld.html">Introduction to JSON-LD</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/fiware-for-cities-from-europe-to-the-world--from-smart-to-ai-ready.html">FIWARE for Cities From Europe to the World, From Smart to AI-ready</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/telefónica---fiware--building-smart-cities-and-destinations.html">Telefónica &amp; FIWARE: Building Smart Cities and Destinations</a></li>
@@ -109,7 +109,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/sdg-driven-solutions-for-a-sustainable-world-cup-legacy.html">SDG-Driven Solutions for a Sustainable World Cup Legacy</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-product-passports-for-a-more-circular--transparent-and-traceable-manufacturing---international-trade.html">Digital Product Passports for a More Circular, Transparent and Traceable Manufacturing &amp; International Trade</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ai-and-natural-language-for-smart-cities--turning-data-into-action.html">AI and Natural Language for Smart Cities: Turning Data into Action</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions-for-climate-resilient-cities.html">EarthDataInsight: Turning Satellite Data into Smart Decisions for Climate-Resilient Cities</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/earthdatainsight--turning-satellite-data-into-smart-decisions.html">EarthDataInsight: Turning Satellite Data into Smart Decisions</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/from-silos-to-synergy--building-smart-governance-with-interoperability.html">From Silos to Synergy: Building Smart Governance with Interoperability</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/opensustie---data-integration-of-smart-buildings-and-smart-cities.html">OpenSUSTIE - Data Integration of Smart Buildings and Smart Cities</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twins-for-real-time-optimization-of-sporting-mega-events.html">Digital Twins for Real-Time Optimization of Sporting Mega-Events</a></li>
@@ -127,7 +127,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/registration-and-welcome-coffee.html">Registration and Welcome Coffee</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/secure-smart-city.html">Secure Smart City</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ict-platform-and-rapid-prototyping-with-fiware.html">ICT Platform and Rapid Prototyping With FIWARE</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/fiware-training.html">FIWARE Training</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/fiware-training--day-two.html">FIWARE Training: Day Two</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/identity-and-access-control-in-fiware-systems.html">Identity and Access Control in FIWARE Systems</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/towards-human-centric-smart-city-services-through-decentralized-identity-management-.html">Towards Human-Centric Smart City Services through Decentralized Identity Management
 </a></li>
@@ -148,7 +148,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/opportunities-from-each-panelists.html">Opportunities From Each Panelists</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/options-for-data-persistence.html">Options for Data Persistence</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/panel-open-discussion.html">Panel Open Discussion</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/extended-fiware-catalog-compoinents.html">Extended FIWARE Catalog Compoinents</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/extended-fiware-catalog-components.html">Extended FIWARE Catalog Components</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/training-certificates.html">Training Certificates</a></li>
 	</ul>
