--- a/directories/fiware-summit/speakers/filters.html
+++ b/directories/fiware-summit/speakers/filters.html
@@ -56,7 +56,7 @@
                         <option value='berkane-provincial-council'>Berkane Provincial Council</option>
                         <option value='cnr-imati'>CNR-IMATI</option>
                         <option value='digital-development-agency--add-'>Digital Development Agency (ADD)</option>
-                        <option value='dksr---data-competence-center-for-cities-and-regions'>DKSR - Data Competence Center for Cities and Regions</option>
+                        <option value='dksr'>DKSR</option>
                         <option value='engineering'>Engineering</option>
                         <option value='eurecat'>Eurecat</option>
                         <option value='ficodes'>FICODES</option>
@@ -113,7 +113,7 @@
                         <option value='lead'>Lead</option>
                         <option value='manager'>Manager</option>
                         <option value='managing-partner'>Managing Partner</option>
-                        <option value='minister-delegate'>Minister Delegate</option>
+                        <option value='ministry-delegate'>Ministry Delegate</option>
                         <option value='owner'>Owner</option>
                         <option value='president'>President</option>
                         <option value='product-manager'>Product Manager</option>
